single fixes - update CLI shutdown